add header @media screen

--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@
 
 .page {
     align-items: center;
-    margin: 0 auto;
+    margin: 0;
     font-family: Inter;
     background-color: #2a2c2f;
 }
