--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,20 +1,75 @@
 .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 34px;
+    margin: 0 auto;
+}
 
+.header__logo {
+    margin-bottom: 90px;
 }
 
 .header__title {
-     color: white;
-     font-size: 96px;
-     font-family: Inter;
-     font-weight: 900;
-     line-height: 100px;
-     word-wrap: break-word
+    color: white;
+    font-size: 96px;
+    font-family: Inter;
+    font-weight: 900;
+    line-height: 100px;
+    word-wrap: break-word;
+    margin: 0 auto;
+    margin-bottom: 32px;
+    text-align: center;
+    max-width: 793px; 
 }
 
 .header__subtitle {
-
+    margin: 0 auto;
+    max-width: 720px;
+    color: white;
+    font-size: 30px;
+    font-family: Inter;
+    font-weight: 400;
+    line-height: 36px;
+    text-align: center;
+    margin-bottom: 64px;    
 }
 
 .header__image {
+    max-width: 100%;
+    align-items: center;
+}
 
+@media screen and (max-width: 980px) {
+    .header__title {
+        margin-bottom: 99px;
+    }
+    .header__subtitle {
+        margin-bottom: 69px;     
+    }   
+    .header__image {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 544px) {
+    .header__logo {
+        margin-bottom: 50px;
+        max-width: 50%;
+    }
+    .header__title {
+        font-size: 40px;
+        line-height: 44px;
+        margin-bottom: 60px;
+        max-width: 288px;
+    }
+    .header__subtitle {
+        margin-bottom: 40px;
+        font-size: 16px;
+        line-height: 20px;
+        max-width: 288px;
+    }
+    .header__image {
+        margin: 0;
+    }
 }
