--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,10 @@
 @import url(../styles/normalize.css);
 @import url(../blocks/header.css);
+@import url(../blocks/intro.css);
 
 .page {
     align-items: center;
-    margin: 0;
+    margin: 0 auto;
     font-family: Inter;
     background-color: #2a2c2f;
 }
