--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,7 @@
 @import url(../blocks/header.css);
 @import url(../blocks/intro.css);
 @import url(../blocks/photo-grid.css);
+@import url(../blocks/places.css);
 
 .page {
     align-items: center;
