--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,8 @@
 @import url(../blocks/intro.css);
 @import url(../blocks/photo-grid.css);
 @import url(../blocks/places.css);
+@import url(../blocks/cover.css);
+@import url(../blocks/footer.css);
 
 .page {
     align-items: center;
