--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -2,11 +2,8 @@
     margin: 0 auto;
     margin-top: 92px;
     max-width: 1184px;
-}
-
-.cover__img {
-    margin: 0;
-    max-width: 100%;
+    height: 740px;
+    background-image: url(../images/__cover_img.jpg);
 }
 
 .cover__container {
