--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -1,4 +1,5 @@
 .cover {
+    position: relative;
     margin: 0 auto;
     margin-top: 92px;
     max-width: 1184px;
@@ -6,7 +7,16 @@
     background-image: url(../images/__cover_img.jpg);
 }
 
+.cover__overlay {
+    max-width: 1184px;
+    height: 740px;
+    background-color: #2A2C2F;
+}
+
 .cover__container {
+    position: absolute;
+    top: 35%;
+    left: 34%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,4 +50,8 @@
     font-size: 18px;
     font-family: Inter;
     font-weight: 600;
+    padding: 13px 20px;
+    border-radius: 4px;
+    background-color: #0278FE;
+    text-decoration: none;
 }
