--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -1,57 +1,73 @@
 .cover {
     position: relative;
     margin: 0 auto;
-    margin-top: 92px;
-    max-width: 1184px;
-    height: 740px;
-    background-image: url(../images/__cover_img.jpg);
-}
-
-.cover__overlay {
-    max-width: 1184px;
-    height: 740px;
-    background-color: #2A2C2F;
+    font-family: Inter;
+    color: #FFFDFD;
+    max-width: 90%;
 }
 
 .cover__container {
     position: absolute;
-    top: 35%;
-    left: 34%;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
     row-gap: 32px;
-    max-width: 656px;
+    transition: 0.2s;
 }
 
+.cover__container:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.cover__img {
+    width: 100%;
+    filter: brightness(80%);
+}
 .cover__title {
     margin:0;
-    color: #FFFDFD;
     font-size: 72px;
-    font-family: Inter;
     font-weight: 900;
-    line-height: 76px;
+    line-height: 1.05;
 }
 
 .cover__subtitle {
     margin:0;
     max-width: 280px;
     text-align: center;
-    color: white;
     font-size: 18px;
-    font-family: Inter;
     font-weight: 400;
-    line-height: 22px;
+    line-height: 1.22;
 }
 
 .cover__link {
     margin:0;
-    color: white;
     font-size: 18px;
-    font-family: Inter;
+    color: #FFFDFD;
     font-weight: 600;
     padding: 13px 20px;
     border-radius: 4px;
     background-color: #0278FE;
     text-decoration: none;
+    transition: 0.2s;
+    opacity: 100%;
+}
+
+.cover__link:hover {
+    opacity: 80%;
+}
+
+@media screen and (max-width: 544px)  {
+    .cover__title {
+        font-size: 32px;
+        line-height: 1.1;
+    }
+    .cover__subtitle {
+        font-size: 14px;
+        line-height: 1.15;
+    }
 }
