--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -1,40 +1,36 @@
 .intro {
     margin: 0 auto;
     margin-top: 92px;
-    max-width: 984px;
+    max-width: 828px;
     display: flex;
     flex-direction: column;
-    text-align: left;
+    justify-content: left;
+    color: white;
+    font-family: Inter;
 }
 
 .intro__title {
-    color: white;
     font-size: 54px;
-    font-family: Inter;
     font-weight: 900;
-    line-height: 58px;
+    line-height: 1.05;
     max-width: 828px;
     margin: 0;
     margin-bottom: 1%;
 }
 
 .intro__subtitle {
-    color: white;
     font-size: 24px;
-    font-family: Inter;
     font-weight: 400;
-    line-height: 34px;
+    line-height: 1.2;
     max-width: 736px;
     margin: 0;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
 }
 
 .intro__author {
-    color: white;
     font-size: 24px;
-    font-family: Inter;
     font-weight: 400;
-    line-height: 34px;
+    line-height: 1.2;
     max-width: 720px;
     text-align: right;
     margin: 0;
@@ -42,11 +38,9 @@
 }
 
 .intro__paragraph {
-    color: white;
     font-size: 16px;
-    font-family: Inter;
     font-weight: 400;
-    line-height: 26.08px;
+    line-height: 1.5;
     max-width: 720px;
     margin: 0;
 }
@@ -54,25 +48,24 @@
 @media screen and (max-width: 980px) {
     .intro {
         max-width: 720px;
-        margin-top: 88px;
+        padding: 0 2%;
     }
     .intro__title {
-        margin-bottom: 3%;
+        margin-bottom: 4%;
     }
 }
 
 @media screen and (max-width: 544px) {
     .intro {
-        max-width: 288px;
-        margin-top: 44px;
+        max-width: 90%;
+        padding: 0 2%;
     }
     .intro__title {
-        margin-bottom: 15%;
         font-size: 32px;
-        line-height: 35px;
+        margin-bottom: 6%;
+        line-height: 1.02;
     }
     .intro__subtitle {
-        margin-bottom: 15%;
-        line-height: 30px;
+        line-height: 1.5;
     }
 }
