--- a/blocks/photo-grid.css
+++ b/blocks/photo-grid.css
@@ -8,13 +8,9 @@
     max-width: 90%;
 }
 
-.photo-grid__item {
-    margin: 0 auto;
-}
 
 .photo-grid__img {
-    max-width: 100%;
-    max-height: 100%;
+ width: 100%;
 }
 
 @media screen and (max-width: 980px) {
