--- a/blocks/places.css
+++ b/blocks/places.css
@@ -3,17 +3,19 @@
     margin-top: 10%;
     color: white;
     font-family: Inter;
-    max-width: 984px;
 }
 
 .places__grid {
-    margin: 0;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, auto);
     column-gap: 5%;
     row-gap: 48px;
     margin-bottom: 10%;
     list-style: none;
+    padding: 0 2%;
+    max-width: 984px;
 }
 
 .places__title {
@@ -25,14 +27,9 @@
     max-width: 460px;
 }
 
-.places__image-container{
-    margin: 0;
-    max-width: 460px;
-    max-height: 460px;
-}
 .places__image {
     margin: 0;
-    width: 100%;
+    max-width: 100%;
 }
 
 .places__author {
@@ -54,9 +51,9 @@
 }
 
 .places__paragraph-container {
-    display: flex;
-    flex-direction: column;
     row-gap: 2%;
+    grid-row: 2 / 5;
+    grid-column: 2;
 }
 
 .places__paragraph{
@@ -76,19 +73,38 @@
     background-color: #0278FE;
     border-radius: 4px;
     text-decoration: none;
+    opacity: 100%;
+    transition: 0.2s;
 }
-
-@media screen and (max-width: 980px) {
-    .places {
-        max-width: 733px;
-    }
+.places__link:hover {
+    opacity: 80%;
 }
 
 @media screen and (max-width: 544px) {
-    .places {
-        max-width: 90%;
-    }
     .places__grid {
-        grid-template-columns: auto;
-    }
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        margin-left: 2%;
+        margin-right: 2%;
+   }
+   .places__title {
+    font-size: 32px;
+   }
+
+   .places__author-container {
+    width: 100%;
+    text-align: left;
+   }
+   .places__author {
+    margin-top: 0;
+   }
+   .places__paragraph-container {
+    text-align: left;
+   }
+   .places__link {
+    text-align: center;
+    font-size: 14px;
+    max-width: 288px;   
+   }
 }
