--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,7 @@
 @import url(../styles/normalize.css);
+@import url(../fonts/Inter-Black.woff2);
+@import url(../fonts/Inter-SemiBold.woff2);
+@import url(../fonts/Inter-Regular.woff2);
 @import url(../blocks/header.css);
 @import url(../blocks/intro.css);
 @import url(../blocks/photo-grid.css);
