--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,5 @@
 @import url(../styles/normalize.css);
-@import url(../fonts/Inter-Black.woff2);
-@import url(../fonts/Inter-SemiBold.woff2);
-@import url(../fonts/Inter-Regular.woff2);
+@import url(../vendor/fonts/inter.css);
 @import url(../blocks/header.css);
 @import url(../blocks/intro.css);
 @import url(../blocks/photo-grid.css);
@@ -12,6 +10,6 @@
 .page {
     align-items: center;
     margin: 0 auto;
-    font-family: Inter;
     background-color: #2a2c2f;
+    font-family: "Inter", Arial, sans-serif;
 }
